# birdsignal

./: .gitignore  readme.md
backend/data/: bootstrap_nltk.py  course_details_analyzer.py  fetch_reddit_data.py  pipeline.py  pipeline_smoke_test.py  process_threads.py  pyproject.toml  requirements.txt  run_all_courses.py  sentiment_analyzer.py
backend/reddit_api/: fetchBirdCourses.js  index.js  package-lock.json  package.json  pnpm-lock.yaml  redditService.js
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: site.webmanifest
frontend/public/course_details/: AB101.json  AB102.json  AN100.json  AN110.json  AR101.json  AR105.json  AS101.json  AS102.json  BU111.json  CC100.json  CC102.json  CC202.json  CP102.json  CP103.json  CP104.json  CS208.json  DH100.json  DH200.json  DH399.json  EC207.json  EC229.json  EC234.json  EC238.json  EC281.json  EC310.json  EC328.json  EC335.json  EM101.json  EM110.json  EM202.json  EM203.json  EM300.json  EN112.json  ES110.json  ES274.json  FS101.json  GESC151.json  GESC231.json  GG101.json  GG102.json  (+37 more)
frontend/public/data/course-catalog/: by-code.json  normalized.json  raw.json
frontend/scripts/: normalize-bird-courses.mjs  sync-bird-courses-from-sheet.mjs
frontend/src/: App.tsx  index.css
frontend/src/components/: BirdScoreMeter.tsx  CourseCard.tsx  CourseDetails.tsx  Header.tsx  ThreadList.tsx
frontend/src/utils/: courseInsights.ts
scripts/: update-term.sh
