[project]
name = "birdsignal-data-pipeline"
version = "0.1.0"
description = "BirdSignal Reddit data processing and course sentiment analysis pipeline."
requires-python = ">=3.10"
dependencies = [
  "pandas>=1.5.3",
  "numpy>=1.24.3",
  "nltk>=3.8.1",
  "scikit-learn>=1.2.2",
  "requests>=2.31.0",
  "python-dateutil>=2.8.2",
]

[tool.uv]
package = false
